# monorepo

./: README.md  pyproject.toml
fantasy_hockey/: README.md  helpers.py  main.py  pyproject.toml  xml_class.py  yahoo_api.py
invoice_generator/: README.md  main.py  pyproject.toml  utils.py
job_alerts/: README.md  job_ahs.py  job_epsb.py  job_gov.py  pyproject.toml
myutils/: README.md  pyproject.toml
myutils/src/myutils/: cloudflare.py  config.py  database.py  date_util.py  email.py  holiday.py  playwright.py  str_util.py  telegram.py
myutils/src/myutils/ocr/: google.py  preprocessing.py  tesseract.py
myutils/tests/: test_holiday.py
package_tracker/: README.md  extra_data.py  internal_api.py  main.py  package.py  providers.py  pyproject.toml
scripts/: README.md  asus_router.py  bluray.py  borrowell.py  cloudflare.py  creditkarma.py  lotto.py  press_release.py  pyproject.toml  questrade_dividend.py  questrade_util.py  rfd.py  rfd_config.py
server/: README.md  adblock.py  backup.py  email_ping.py  monitor.py  notify.py  ping_device.py  pyproject.toml  report.py  utils.py
tools/: README.md  amazon_splitter.py  pyproject.toml
version_check/: README.md  app_db.py  helpers.py  main.py  pyproject.toml
