[project]
name = "monorepo"
version = "0.1.0"
description = "My personal monorepo of python projects and scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "myutils",
    "scripts",
    "fantasy_hockey",
    "version_check",
    "package_tracker",
    "server",
    "job_alerts",
    "invoice_generator",
    "tools",
]

[tool.ruff]
line-length = 100

[tool.ty.environment]
python = ".venv"
