[project]
name = "myutils"
version = "0.1.0"
description = "Shared utils for personal projects"
readme = "README.md"
authors = [{ name = "Ajanth Subramanian", email = "rydeordie99@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "opencv-python-headless>=4.13.0.92",
    "playwright>=1.58.0",
    "tesserocr>=2.10.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
