[project]
name = "scripts"
version = "0.1.0"
description = "Miscellanous scrapers and scripts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "myutils",
    "playwright>=1.58.0",
]

[tool.uv.sources]
myutils = { workspace = true }
